<resources>
    <string name="app_name">Valauro Wedding Rings</string>
    <string name="compare_activity">Valauro Wedding Rings - Σύγκριση βερών</string>
    <string name="design">Σχέδιο:</string>
    <string name="carats">Καράτια:</string>
    <string name="profile">Προφίλ:</string>
    <string name="stones">Αριθμός μπριγιάν:</string>
    <string name="priceNoVat">Τιμή χωρίς ΦΠΑ </string>
    <string name="priceWithVat">Τιμή με ΦΠΑ </string>
    <string name="totalcostNoVat">Προτεινόμενη τιμή λιανικής χωρίς ΦΠΑ:</string>
    <string name="totalcostWithVat">Προτεινόμενη τιμή λιανικής με ΦΠΑ:</string>
    <string name="calculate_order">υπολογισμοσ παραγγελιασ</string>
    <string name="add_to_compare">προσθηκη στη συγκριση</string>
    <string name="add_to_compare_complete">Το ζευγάρι προστέθηκε στη σύγκριση</string>
    <string name="compare">συγκριση</string>
    <string name="no_internet">Συνδεθείτε στο Internet και επανεκκινήστε την εφαρμογή</string>
    <string name="w_just_normal_profile">Το γυναικείο σχέδιο είναι διαθέσιμο μόνο σε κανονικό προφίλ</string>
    <string name="w_just_high_profile">Το γυναικείο σχέδιο είναι διαθέσιμο μόνο σε ψηλό προφίλ</string>
    <string name="no_low_profile">Το σχέδιο αυτό δεν είναι διαθέσιμο σε χαμηλό προφίλ</string>
    <string name="m_just_normal_profile">Το ανδρικό σχέδιο είναι διαθέσιμο μόνο σε κανονικό προφίλ</string>
    <string name="m_just_high_profile">Το ανδρικό σχέδιο είναι διαθέσιμο μόνο σε ψηλό προφίλ</string>
    <string name="m_no_low_profile">Το ανδρικό σχέδιο δεν είναι διαθέσιμο σε χαμηλό προφίλ</string>
    <string name="availableColor">Διαθέσιμο σε λευκό, κίτρινο</string>
    <string name="price_no_vat">Τιμή χωρίς ΦΠΑ : </string>
    <string name="price_with_vat">Τιμή με ΦΠΑ : </string>
    <string name="three_colors">Διαθέσιμο σε λευκό, κίτρινο, ροζ </string>
    <string name="color_combination">Διαθέσιμο σε δίχρωμο, μονόχρωμο και όλους τους συνδυασμούς</string>
    <string name="all_combination">Διαθέσιμο σε όλους τους συνδυασμούς</string>
    <string name="nocolor"> </string>
    <string name="explanation_text">Η παραπάνω τιμή αναφέρεται σε μεγέθη ως 56 γυναικείο και 64 ανδρικό</string>
    <string name="internetSettings">Ρυθμίσεις Internet </string>
    <string name="resetApp">Επανεκκίνηση </string>
    <string name="appVersion">ValauroPartner Version 2.6.0 by Dim)e(Geo </string>
    <string name="carats8K">8K</string>
    <string name="carats14K">14K</string>
    <string name="carats18K">18K</string>
    <string name="profileLow">Χαμηλό</string>
    <string name="profileNormal">Κανονικό</string>
    <string name="profileHigh">Ψηλό</string>
    <string name="pairPrice">Τιμή ζευγαριού</string>
    <string name="deletePair">Διαγραφή</string>
    <string name="deletePairQuestion">Θέλετε να διαγράψετε αυτό το ζευγάρι;</string>
    <string name="Cancel">Ακύρωση</string>
    <string name="Delete">Διαγραφή</string>
    <string name="chooseDesign">Επιλέξτε σχέδιο</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <string name="App_Updated">Η εφαρμογή είναι ενημερωμένη στην έκδοση 2.6.0p</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_code_title">Δώστε κωδικό διαχειριστή</string>
    <string name="code_title">Κωδικός Διαχειριστή</string>
    <string name="code_Summary">Αποκτήστε δικαιώματα διαχειριστή</string>
    <string name="FPA_percentage">Δώστε ποσοστό ΦΠΑ</string>
    <string name="FPA_title">Ποσοστό ΦΠΑ</string>
    <string name="FPA_Summary">Εισάγετε το ποσοστό ΦΠΑ που ισχύει στην περίπτωση σας</string>
    <string name="profit_percentage">Δώστε ποσοστό κέρδους</string>
    <string name="profit_Summary">Εισάγετε το ποσοστό κέρδους που επιθυμείτε</string>
    <string name="profit_title">Ποσοστό κέρδους</string>
    <string name="FPAnotNumber">Ο ΦΠΑ που δώσατε δεν είναι αριθμός</string>
    <string name="ProfitNotNumber">Το ποσοστό κέρδους που δώσατε δεν είναι αριθμός</string>
</resources>
